--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-Flask==2.0.2
-flask-cors==3.0.10
-scikit-learn==1.1.3
-pandas==1.5.2
-numpy==1.23.5
-flask_restful==0.3.9
-peewee==3.15.4
+Flask
+flask-cors
+scikit-learn
+pandas
+numpy
+flask_restful
+peewee
+category_encoders
 flask-jwt-extended
 gevent
