--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,45 @@
 {
-    "python.defaultInterpreterPath": "D:/sib/mental-helps/MentalEnv/Scripts/python.exe",
     "appService.defaultWebAppToDeploy": "/subscriptions/ffed939d-7987-4617-836b-7e8a3760d848/AppServices/subscriptions/ffed939d-7987-4617-836b-7e8a3760d848/resourceGroups/mentalhelps-group/providers/Microsoft.Web/sites/apimentalhelps",
     "appService.deploySubpath": ".",
-}
+    "python.analysis.typeCheckingMode": "off",
+    "python.analysis.diagnosticMode": "openFilesOnly",
+    "python.formatting.provider": "black",
+    "python.linting.enabled": true,
+    "python.linting.pycodestyleEnabled": true,
+    "python.defaultInterpreterPath": "D:/sib/mental-helps/MentalEnv/Scripts/python.exe",
+    "python.formatting.blackArgs": [
+      "--line-length=79",
+      "--experimental-string-processing"
+    ],
+    "appService.zipIgnorePattern": [
+      "__pycache__{,/**}",
+      "*.py[cod]",
+      "*$py.class",
+      ".Python{,/**}",
+      "build{,/**}",
+      "develop-eggs{,/**}",
+      "dist{,/**}",
+      "downloads{,/**}",
+      "eggs{,/**}",
+      ".eggs{,/**}",
+      "lib{,/**}",
+      "lib64{,/**}",
+      "parts{,/**}",
+      "sdist{,/**}",
+      "var{,/**}",
+      "wheels{,/**}",
+      "share/python-wheels{,/**}",
+      "*.egg-info{,/**}",
+      ".installed.cfg",
+      "*.egg",
+      "MANIFEST",
+      ".env{,/**}",
+      ".venv{,/**}",
+      "env{,/**}",
+      "venv{,/**}",
+      "ENV{,/**}",
+      "env.bak{,/**}",
+      "venv.bak{,/**}",
+      ".vscode{,/**}"
+    ]
+  }
